--- a/frontend/src/containers/CurrUser/EditProfile.css
+++ b/frontend/src/containers/CurrUser/EditProfile.css
@@ -17,7 +17,7 @@
   width: 300px;
   height: 300px;
   margin-top: 100px;
-
+  font-family: sans-serif;
 
 }
 
@@ -30,8 +30,8 @@
 
 
 .uploadProfileText{
-  margin-left: -150px;
-  font-size: 30px;
+  margin-left: -125px;
+  font-size: 28px;
   /* transform: translateX(-50%) */
 }
 
