--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -479,8 +479,9 @@
 
 .eventChatInput {
   /* background-color: gainsboro; */
-  border-radius: 20px;
-  margin-left: 10px;
+  margin-top:10px;
+  border-radius: 10px;
+  margin-left: 15px;
   width:95%;
   font-size: 16px;
 
