--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -4,6 +4,14 @@
   /* background-color: red; */
 }
 
+.popoverPic{
+  object-fit: cover;
+  width:75px;
+  height:75px;
+  border-radius: 10px;
+  margin-top: -120px;
+}
+
 .buttonSize{
   font-size:80px;
 }
