revamp look for edit event, gotta add maps in

--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -341,6 +341,10 @@
   transition: 0.5s;
 }
 
+.hideXScroll{
+  overflow-x: hidden;
+}
+
 .editEventButtonContainer{
   /* background-color: red; */
   color:#1890ff;
