added in the post page view

--- a/frontend/src/containers/UserPostTabFolder/UserPostList.css
+++ b/frontend/src/containers/UserPostTabFolder/UserPostList.css
@@ -74,5 +74,8 @@
 
 .postListTabContainer .postListContainer .postListSquare:hover .eyeClick{
   color: white;
+}
 
+.postListTabContainer .postListContainer .postListSquare:hover .miniCalendar{
+  color: red;
 }
