--- a/frontend/src/components/PostPageFolder/UserPostPage.css
+++ b/frontend/src/components/PostPageFolder/UserPostPage.css
@@ -35,7 +35,14 @@
 .postHolder .postPicturesCarousel{
   width: 70%;
   height: 100%;
-  background-color: red;
+  text-align: center;
+  overflow: hidden;
+  /* background-color: red; */
+}
+
+.postHolder .postPicturesCarousel .singlePic{
+  position: relative;
+  height: 100%;
 }
 
 
@@ -66,6 +73,11 @@
   left: 5px;
   bottom: 5px;
   font-weight: 500;
+}
+.postModalRight .postNameTag .postTimeStamp{
+  position: absolute;
+  top: 25px;
+  right: 40px;
 }
 
 .postLikeCommentNum {
