--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -991,16 +991,16 @@ main {
 
 .calendar .body .yearcell .monthBox {
   /* background-image: linear-gradient(to bottom right, #43cea2 , #185a9d); */
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
-
-  color: white;
+  font-family: 'Segoe UI Regular';
+  color:'black';
 
 }
 
 .calendar .body .yearcell .monthBox:hover {
   /* font-size: 20px; */
-  /* transform: scale(1.75); */
+  transform: scale(1.25);
   transition: .2s ease-out;
 }
 
