--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -506,7 +506,6 @@ main {
   font-weight: 400;
   font-size: 17px;
   padding: 1em 0;
-  
   /* border-bottom: 1px solid var(--border-color); */
   /* background-color: blue; */
   width: 850px;
@@ -705,12 +704,12 @@ main {
 }
 
 
-.mainCalContainer{
+.calendarContainer .mainCalContainer{
   width: 1500px;
   position: relative;
   left: 15px;
   top: 0px;
-
+  padding: 0;
   /* padding-left: 25px; */
   /* background-color: orange; */
 }
@@ -836,14 +835,15 @@ main {
 }
 
 
-.selectView {
+.miniCalContainer .selectView {
   /* background-color: red; */
 
   position: relative;
-  top: 10px;
-  left:125px;
+  top: 80px;
+  left:70px;
   width: 250px;
   margin-bottom: 50px;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 
 }
 
