--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -273,6 +273,7 @@ main {
 .col-start {
   justify-content: flex-start;
   text-align: left;
+
   /* width: 20px; */
   /* background-color: red; */
 }
@@ -480,11 +481,14 @@ main {
 
 .calendar .header {
   /* text-transform: uppercase; */
-  font-weight: 400;
+  font-weight: 200;
   font-size: 15px;
   padding: 1.5em 0;
+  font-size: 20px;
+  font-family: 'Segoe UI Regular';
   /* border-bottom: 1px solid var(--border-color); */
   /* background-color: blue; */
+
   width: 600px;
 }
 
