--- a/frontend/src/containers/UserEventTabFolder/UserEventList.css
+++ b/frontend/src/containers/UserEventTabFolder/UserEventList.css
@@ -60,7 +60,7 @@
 .eventListTabContainer .eventListContainer .eventContainer .eventBoxTitle{
    /* color: red; */
    position: absolute;
-   font-size:35px;
+   font-size:40px;
    left: 19%;
    top: 5%;
 }
@@ -76,8 +76,8 @@
   position: absolute;
   color: gray;
   left: 19%;
-  top: 30%;
-  font-size: 18px;
+  top: 40%;
+  font-size: 20px;
   /* display: none; */
 }
 
@@ -85,24 +85,53 @@
   /* color: red; */
   position: absolute;
   left: 19%;
-  top: 45%;
+  top: 57%;
   color: gray;
-  font-size: 18px;
+  font-size: 20px;
   /* display: none; */
 }
 .eventListTabContainer .eventListContainer .eventContainer .eventBoxTimes{
   /* color: red; */
   position: absolute;
   left: 19%;
-  top: 60%;
-  font-size: 18px;
+  top: 75%;
+  font-size: 20px;
   color: gray;
   /* display: none; */
 }
 
 
 .eventListTabContainer .eventListContainer .eventContainer .eventBoxHost{
-  color: red;
+  /* color: red; */
   position: absolute;
-  display: none;
+  /* display: none; */
+  font-size: 18px;
+  top: 57%;
+  left: 50%;
+  color: gray;
+}
+
+.eventListTabContainer .eventListContainer .eventContainer .eventBoxParticipant{
+  /* background-color: red; */
+  font-size: 18px;
+  position: absolute;
+  left: 44.5%;
+  top: 70%;
+  color: gray;
+  display: flex;
+}
+
+
+.participants{
+  /* background-color: red; */
+  padding-top: 10px;
+  /* position: absolute;
+  left: -159%;
+  top: 22%; */
+
+}
+.eventListTabContainer .eventListContainer .eventContainer .eventBoxParticipant .likeList{
+  /* background-color: red; */
+  position: absolute;
+  left: 82%;
 }
