will change symbols for left and right

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -708,10 +708,10 @@ main {
 }
 
 
-.calendarContainer .mainCalContainer{
+.mainCalContainer{
   width: 1500px;
   position: relative;
-  left: 15px;
+  left: 30px;
   top: 0px;
   padding: 0;
   /* padding-left: 25px; */
