backend for joing event in the event page

--- a/frontend/src/containers/UserEventTabFolder/UserEventList.css
+++ b/frontend/src/containers/UserEventTabFolder/UserEventList.css
@@ -139,7 +139,7 @@
 }
 
 .eventListTabContainer .eventListContainer .eventContainer .joinButton{
-  background-color: red;
+  cursor: pointer;
   height: 35%;
   width: 15%;
   position: absolute;
