--- a/frontend/src/containers/UserEventTabFolder/UserEventList.css
+++ b/frontend/src/containers/UserEventTabFolder/UserEventList.css
@@ -25,7 +25,9 @@
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
   overflow: hidden;
 }
-
+.eventListTabContainer .eventListContainer .eventContainer.active{
+  opacity: 0.5;
+}
 
 
 .eventListTabContainer .eventListContainer .eventContainer .noPicBox{
@@ -172,10 +174,31 @@
   /* padding-top: 30%; */
 }
 
+
 .eventListTabContainer .eventListContainer .eventContainer .viewButton .viewText{
   position: relative;
   top: 15%;
 }
+
+.eventListTabContainer .eventListContainer .eventContainer .viewButtonPass{
+  height: 35%;
+  width: 15%;
+  position: absolute;
+  right: 5%;
+  top: 30%;
+  border-radius: 10px;
+  font-size: 27px;
+  color: white;
+  background-color: lightgray;
+  cursor: pointer;
+  opacity: 1;
+  z-index: 999;
+}
+.eventListTabContainer .eventListContainer .eventContainer .viewButtonPass .viewText{
+  position: relative;
+  top: 15%;
+}
+
 
 .eventListTabContainer .eventListContainer .eventContainer .hostButton{
   height: 35%;
