--- a/frontend/src/containers/UserEventTabFolder/UserEventList.css
+++ b/frontend/src/containers/UserEventTabFolder/UserEventList.css
@@ -26,7 +26,7 @@
   overflow: hidden;
 }
 .eventListTabContainer .eventListContainer .eventContainer.active{
-  opacity: 0.5;
+  /* opacity: 0.5; */
 }
 
 
@@ -67,6 +67,20 @@
    font-size:40px;
    left: 19%;
    top: 5%;
+}
+.eventListTabContainer .eventListContainer .eventContainer .eventBoxTitle .endTag{
+  position: relative;
+  background-color: #F5F5F5;
+  color: red;
+  border-radius: 10px;
+  height: 20px;
+  font-size: 18px;
+  /* top:10%;
+  left: 95%; */
+  bottom: 7px;
+  margin-left: 10px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 .eventListTabContainer .eventListContainer .eventContainer .eventBoxContent{
@@ -180,7 +194,7 @@
   top: 15%;
 }
 
-.eventListTabContainer .eventListContainer .eventContainer .viewButtonPass{
+.eventListTabContainer .eventListContainer .eventContainer.active .viewButtonPass{
   height: 35%;
   width: 15%;
   position: absolute;
@@ -192,7 +206,6 @@
   background-color: lightgray;
   cursor: pointer;
   opacity: 1;
-  z-index: 999;
 }
 .eventListTabContainer .eventListContainer .eventContainer .viewButtonPass .viewText{
   position: relative;
