dropdown with profile pic on edit form

--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -81,6 +81,11 @@
   /* background-color: gainsboro; */
 }
 
+.personProfilePic{
+  object-fit: cover;
+  width:10px;
+  height:10px;
+}
 
 
 .flex-container {
