select box hieght steps

--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -534,3 +534,11 @@
   font-size: 16px;
 
 }
+
+
+.selectBox{
+   white-space: nowrap;
+   line-height: 200px;
+   overflow: auto;
+   border: none;
+}
