--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -263,7 +263,7 @@ main {
   border: 1px solid red;
 }
 
-.weekCalendar .weekDays .weekcol:hover {
+.dayover {
  background-color: gainsboro;
 }
 
@@ -298,7 +298,7 @@ main {
 .flex-container .sidecol{
   position: relative;
   width: 10px;
-  left: 50px;
+  left: 75px;
   top: 225px;
   height: 10px;
   /* background-color: orange; */
@@ -572,8 +572,18 @@ main {
   /* background-color: red; */
 }
 
+.weekDayHover:hover{
+  background-color: #1890ff;
+  border-radius: 20px;
+  padding-right:5px;
+  padding-left:5px;
+  cursor: pointer;
+  color:white;
+}
 .calendar .weekDays {
   /* text-transform: uppercase; */
+  cursor: pointer;
+
   font-weight: 400;
   color: ;
   font-size: 100%;
