--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -423,30 +423,6 @@
   line-height: 100%;
 }
 
-.chatHeader{
-  margin-left: 50px;
-  color:#096dd9;
-  font-size: 14px;
-  margin-top: 15px;
-}
-
-
-.eventGroupChat{
-  margin-top: 25px;
-  width: 30%;
-  /* height: 100%; */
-  /* background-color: red; */
-}
-
-/* CSS for the eventChat side of the event page */
-.eventGroupChatContainer{
-  /* background-color: red; */
-  width: 100%;
-  height: 80%;
-  overflow: hidden;
-
-}
-
 .eventGroupChat .chatDisabledPage{
   background-color: whitesmoke;
   padding-top: 50%;
@@ -454,12 +430,41 @@
   text-align: center;
   height: 100%;
 }
+.chatHeader{
+  margin-left: 150px;
+  color:#096dd9;
+  font-size: 15px;
+  margin-top:-25px;
+}
 
-.eventGroupChatContainer .messageList{
+
+.eventGroupChat{
+  /* margin-top: 20px; */
+  width: 30%;
+  /* background-color: green; */
+}
+
+
+
+.messageList{
   width: 100%;
-  height: 80%;
-  background-color: white;
+  height: 85%;
+  /* background-color: red; */
   overflow: auto;
+  margin-top: 20px;
+  padding:10px;
+  padding-top: 20px;
+}
+
+
+
+/* CSS for the eventChat side of the event page */
+.eventGroupChatContainer{
+  /* background-color: blue; */
+  width: 100%;
+  height: 90%;
+  overflow: hidden;
+
 }
 
 
@@ -527,14 +532,17 @@
 
 .eventChatInput {
   /* background-color: gainsboro; */
-  margin-top:10px;
-  border-radius: 10px;
+  margin-top:25px;
+  border-radius: 5px;
   margin-left: 15px;
   width:95%;
-  font-size: 16px;
+  font-size: 15px;
 
 }
 
+.roundButton{
+  border-radius: 5px;
+}
 
 .selectBox{
    white-space: nowrap;
