small padding change

--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -452,7 +452,7 @@
   /* background-color: red; */
   overflow: auto;
   margin-top: 20px;
-  padding:10px;
+  /* padding:10px; */
   padding-top: 20px;
 }
 
