--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -394,7 +394,7 @@ background: linear-gradient(to bottom, #2193b0, #6dd5ed); /* W3C, IE 10+/ Edge, 
   marginTop:10px;
   font-size: 12px;
   line-height: 11px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   cursor: pointer;
   color: #0275B1;
 }
