--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -109,41 +109,28 @@ box-shadow: 0px 3px 9px rgba(0,0,0,.5);
   transform: translate(-50%, -50%);
   width: 50%;
 }
-
+/*
 .wrap {
   position: relative;
   margin: 10em auto 30em;
   max-width: 960px;
   overscroll-behavior: contain;
-}
+} */
 
 .headers {
-  top: 0;
+  top: 100px;
   position: -webkit-sticky;
   position: sticky;
   z-index: 1;
+
 }
 
 .scroller {
   overflow: auto;
   display: flex;
-  
-}
-
-.track {
-  flex: 1 0 calc(22% + 2px);
-  scroll-snap-align: start;
-}
-.fixedOnNewsFeedParent{
-position: absolute;
-bottom: 0; width: 100%;
-margin: 0; padding: 0;
 
 }
 
-.fixedOnNewsFeedChild{
-  overflow: scroll;
-}
 
 .avatar {
   vertical-align: middle;
@@ -262,7 +249,7 @@ color: #203758;
 
 
 .newsfeed {
-margin-left: 25px;
+margin-left: 10px;
 
   minHeight: 0px;
   /* overflow:auto; */
