--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -113,6 +113,42 @@
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
 
+.addFriendButton {
+  /* background-color: red; */
+  padding-top: 4px;
+  /* position: absolute; */
+  width: 250px;
+  height: 38px;
+  /* border: 1px solid; */
+  background: deepskyblue;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  z-index: 2;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+}
+
+.unFriendButton {
+  /* background-color: red; */
+  padding-top: 4px;
+  /* position: absolute; */
+  width: 250px;
+  height: 38px;
+  /* border: 1px solid; */
+  background: deepskyblue;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  z-index: 2;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+}
+
 .following{
   /* background-color: red; */
   position: relative;
