--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -3,7 +3,7 @@
   width: 250px;
   height: 250px;
   z-index: 1;
-  
+
   display: grid;
   /* grid-template-rows: auto 100px; */
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
@@ -41,26 +41,27 @@
   /* position: absolute; */
 
   bottom: 20%;
-  left: 5%;
+  margin-left: 50px;
   /* background-color: red; */
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 40px;
+  /* color: #ffffff; */
+  color:black;
+  /* font-weight: bold; */
+  font-size: 25px;
   line-height: 26px;
   z-index: 1;
 }
 
 .top-NF{
   position: absolute;
-  color: white;
+  color: grey;
   font-size: 30px;
   /* background-color: red; */
-  left: 88%;
+  left: 87%;
 }
 
 .bottom-NF {
   position: absolute;
-  bottom: 15%;
+  bottom: 20%;
   display: grid;
   grid-template-rows: auto 30px;
   justify-content: center;
@@ -69,6 +70,7 @@
   right: 0%;
   width: 300px;
   color: #363636;
+  /* background-color: red; */
 }
 
 .designation-NF{
@@ -83,7 +85,7 @@
 }
 
 .location-NF{
-  color: #ffffff;
+  color: black;
   margin-top: 10px;
   margin-left: 5px;
   font-size: 13px;
@@ -100,7 +102,7 @@
   height: 38px;
   border-bottom: 1px solid;
   background: transparent;
-  color: #fff;
+  color: black;
   cursor: pointer;
   user-select: none;
   overflow: hidden;
@@ -114,7 +116,7 @@
   /* position: absolute; */
   width: 97px;
   height: 38px;
-  font-size: 25px;
+  font-size: 20px;
   background: transparent;
   color: #fff;
   cursor: pointer;
@@ -134,7 +136,7 @@
   left:0;
   height: 15%;
   width: 100%;
-  color: #fff;
+  color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -146,7 +148,7 @@
 .social-links-NF {
   /* margin-top: 20px; */
   align-items: center;
-  color: #ffffff;
+  color: black;
   width: 100%;
   padding: 0px 0px;
   display: flex;
