--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -94,6 +94,25 @@
   height:50px;
 }
 
+.showNums{
+
+  text-align: center;
+  /* position: absolute; */
+  width: 97px;
+  height: 38px;
+  font-size: 20px;
+  background: transparent;
+  color: black;
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  z-index: 2;
+  transition: 0.5s;
+  /* background-color: red; */
+}
+
+
+
 .boldLikeComment{
   /* font-weight: bold; */
 
