--- a/frontend/src/containers/Container_CSS/Notifications.css
+++ b/frontend/src/containers/Container_CSS/Notifications.css
@@ -43,7 +43,7 @@
   width: 10px;
   /* height: 100px; */
   text-align: left;
-  position: relative;
+  position: absolute;
   left: 287px;
   bottom: 55px;
   opacity: 0.5;
@@ -77,7 +77,7 @@
   width: 10px;
   /* height: 100px; */
   text-align: left;
-  position: relative;
+  position: absolute;
   left: 287px;
   bottom: 50px;
   opacity: 0.5;
@@ -106,7 +106,7 @@
   width: 10px;
   /* height: 100px; */
   text-align: left;
-  position: relative;
+  position: absolute;
   left: 287px;
   bottom: 82px;
   opacity: 0.5;
