--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -3,7 +3,7 @@
   width: 250px;
   height: 250px;
   z-index: 1;
-
+  /* border-radius: 10px; */
   display: grid;
   /* grid-template-rows: auto 100px; */
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
@@ -44,9 +44,10 @@
   margin-left: 50px;
   /* background-color: red; */
   /* color: #ffffff; */
-  color:black;
+  color:grey;
+  font-weight: 400;
   /* font-weight: bold; */
-  font-size: 25px;
+  font-size: 20px;
   line-height: 26px;
   z-index: 1;
 }
@@ -61,99 +62,18 @@
 
 .bottom-NF {
   position: absolute;
-  bottom: 20%;
+  bottom: 15%;
   display: grid;
   grid-template-rows: auto 30px;
   justify-content: center;
-  align-content: center;
-  text-align:center;
   right: 0%;
   width: 300px;
   color: #363636;
   /* background-color: red; */
 }
 
-.designation-NF{
-  /* position: absolute; */
-  color: #ffffff;
-  margin-top: 15px;
-  margin-left: 5px;
-  font-size: 18px;
-  line-height: 14px;
-  z-index: 1;
-  transition: 0.5s;
-}
-
-.location-NF{
-  color: black;
-  margin-top: 10px;
-  margin-left: 5px;
-  font-size: 13px;
-  line-height: 14px;
-  z-index: 1;
-  transition: 0.5s;
-}
-
-.btn-NF{
-  padding-top: 12px;
-  text-align: center;
-  /* position: absolute; */
-  width: 97px;
-  height: 38px;
-  border-bottom: 1px solid;
-  background: transparent;
-  color: black;
-  cursor: pointer;
-  user-select: none;
-  overflow: hidden;
-  z-index: 2;
-  transition: 0.5s;
-}
-
-.num-NF{
-  padding-top: 5px;
-  text-align: center;
-  /* position: absolute; */
-  width: 97px;
-  height: 38px;
-  font-size: 20px;
-  background: transparent;
-  color: #fff;
-  cursor: pointer;
-  user-select: none;
-  overflow: hidden;
-  z-index: 2;
-  transition: 0.5s;
-  /* background-color: red; */
-}
 
 
-.social-NF {
-  padding: 0 35px;
-  position: absolute;
-  background-color: transparent;
-  bottom: 6%;
-  left:0;
-  height: 15%;
-  width: 100%;
-  color: black;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 0;
-  transition: 0.5s;
-}
-
-.social-links-NF {
-  /* margin-top: 20px; */
-  align-items: center;
-  color: black;
-  width: 100%;
-  padding: 0px 0px;
-  display: flex;
-  justify-content: space-between;
-}
 
 /* .profileCard-NF:hover .bottom-NF{
   transform: translateY(-160px);
