--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -1,14 +1,16 @@
 .profileCard-NF{
   background-color: white;
-  width: 250px;
-  height: 250px;
+  width: 225px;
+  height: 260px;
   z-index: 1;
-  /* border-radius: 10px; */
+  border-radius: 10px;
   display: grid;
   /* grid-template-rows: auto 100px; */
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
   position: relative;
   overflow: hidden;
+  padding:10px;
+  box-shadow:  0 10px 50px rgba(0, 0, 0, 0.12);
 
 }
 
@@ -37,17 +39,36 @@
   transform: translateX(-50%);
 }
 
+.morePeopleBox{
+  border-radius: 10px;
+  box-shadow:
+
+  0 10px 50px rgba(0, 0, 0, 0.12);
+}
+
+
+.bottom-NF {
+  position: absolute;
+  bottom: 22.5%;
+  display: grid;
+  grid-template-rows: auto 30px;
+  justify-content: center;
+  right: 0%;
+  width: 300px;
+  color: #363636;
+  /* background-color: red; */
+}
+
 .name-NF {
   /* position: absolute; */
 
-  bottom: 20%;
-  margin-left: 50px;
+  margin-left: 75px;
   /* background-color: red; */
   /* color: #ffffff; */
   color:grey;
-  font-weight: 400;
+  font-weight: 500;
   /* font-weight: bold; */
-  font-size: 20px;
+  font-size: 22px;
   line-height: 26px;
   z-index: 1;
 }
@@ -60,17 +81,6 @@
   left: 87%;
 }
 
-.bottom-NF {
-  position: absolute;
-  bottom: 15%;
-  display: grid;
-  grid-template-rows: auto 30px;
-  justify-content: center;
-  right: 0%;
-  width: 300px;
-  color: #363636;
-  /* background-color: red; */
-}
 
 
 
