--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -199,6 +199,7 @@ color: #203758;
   height:75px;
   /* background-color: red; */
   padding-top: 25px;
+  max-height: 450px;
   /* color:#1890ff; */
 
 }
