--- a/frontend/src/components/SideMenu/style.css
+++ b/frontend/src/components/SideMenu/style.css
@@ -39,11 +39,12 @@ p {
     -webkit-transition: .3s all ease-in-out;
     -o-transition: .3s all ease-in-out;
     transition: .3s all ease-in-out; }
+    /*
   p.show-sidebar {
     overflow: hidden; }
     p.show-sidebar:before {
       opacity: 1;
-      visibility: visible; }
+      visibility: visible; } */
 
 .site-section {
   padding: 7rem 0; }
@@ -121,7 +122,7 @@ aside {
         position: absolute;
         top: 10px;
         font-size: 20px;
-        margin-left: 10px;
+        margin-left: 5px;
         -webkit-transition: .3s all ease;
         -o-transition: .3s all ease;
         transition: .3s all ease;
