--- a/frontend/src/components/SideMenu/style.css
+++ b/frontend/src/components/SideMenu/style.css
@@ -9,10 +9,17 @@ body {
 p {
   color: #b3b3b3;
   font-weight: 300; }
-
+/* 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+  font-family: "Roboto",
+   -apple-system, BlinkMacSystemFont,
+   "Segoe UI", Roboto, "Helvetica Neue",
+   Arial, "Noto Sans",
+   sans-serif, "Apple Color Emoji",
+   "Segoe UI Emoji",
+   "Segoe UI Symbol",
+   "Noto Color Emoji"; } */
 
 a {
   -webkit-transition: .3s all ease;
