--- a/frontend/src/containers/Container_CSS/Notifications.css
+++ b/frontend/src/containers/Container_CSS/Notifications.css
@@ -22,6 +22,7 @@
   height: 70px;
   /* margin: 20px; */
   width: 290px;
+  font-size: 15px;
   /* margin-top: 15px; */
   /* background-color: red; */
 
