--- a/frontend/src/containers/NotificationFolder/PendingEventCard.css
+++ b/frontend/src/containers/NotificationFolder/PendingEventCard.css
@@ -10,21 +10,74 @@
 
   0 10px 50px rgba(0, 0, 0, 0.12);
   font-family: 'Segoe UI Regular';
-
+  margin-top: 12px;
 }
 
 .pendingEventCard .title{
-  color: red;
+  /* color: red; */
+  font-size: 35px;
+  position: relative;
 }
 
 .pendingEventCard .content{
-  color: red;
+  color: darkgrey;
+  position:relative;
+  bottom: 10px;
+  left: 45%;
+  font-size: 15px;
+  /* transform: translateX(-50%); */
+
 }
 
 .pendingEventCard .location{
-  color: red;
+  color:darkgrey;
+  position:relative;
+  right: 5px;
+  font-size: 17px;
+  bottom: 7px;
 }
 
-.pendingEventCard .times{
-  color: red;
+.pendingEventCard .secondRow .times{
+  color: darkgrey;
+  position: relative;
+  font-size: 17px;
+}
+.pendingEventCard .secondRow .hostPic{
+  color: darkgrey;
+  position: relative;
+  left: 70px;
+  font-size: 17px;
+}
+
+.pendingButtons {
+  display: flex;
+}
+
+.pendingButtons .pendingAcceptButton {
+  background-color: #0099FF;
+  color: white;
+  height: 40px;
+  width: 80px;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 7px;
+  /* border: 1px grey solid; */
+  position: relative;
+  left: 35%;
+  top: 11px;
+  cursor: pointer;
+}
+
+.pendingButtons .pendingDeclineButton{
+  background-color: red;
+  color: white;
+  height: 40px;
+  width: 80px;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 7px;
+  position: relative;
+  left: 29%;
+  top: 11px;
+  cursor: pointer;
 }
