--- a/frontend/src/components/SideMenu/style.css
+++ b/frontend/src/components/SideMenu/style.css
@@ -9,7 +9,7 @@ body {
 p {
   color: #b3b3b3;
   font-weight: 300; }
-/* 
+/*
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Roboto",
@@ -74,8 +74,8 @@ aside {
   -o-transition: 0.7s width cubic-bezier(0.23, 1, 0.32, 1);
   transition: 0.7s width cubic-bezier(0.23, 1, 0.32, 1); }
   .show-sidebar aside {
-    width: 260px;
-    
+    width: 225px;
+
     -webkit-transform: translateX(0%);
     -ms-transform: translateX(0%);
     transform: translateX(0%); }
@@ -88,7 +88,7 @@ aside {
     -ms-transform: translateX(100%);
     transform: translateX(100%); }
     .show-sidebar aside .toggle .burger:before, .show-sidebar aside .toggle .burger span, .show-sidebar aside .toggle .burger:after {
-      background: red; }
+      background: gree; }
   .show-sidebar aside {
     -webkit-box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.2); }
@@ -234,6 +234,7 @@ main {
     color: #ccc; }
 
 .burgerTest{
+  margin-bottom: -20px;
   width: 28px;
   height: 32px;
   cursor: pointer;
@@ -243,7 +244,7 @@ main {
   float: left;
 }
 .burger.active:after {
-  background-color: red;
+  background-color: green;
   /*for IE*/ }
 
 
@@ -274,14 +275,6 @@ main {
   -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
   content: ""; }
 
-.burger:before {
-  top: 4px; }
-
-.burger span {
-  top: 15px; }
-
-.burger:after {
-  top: 26px; }
 
 /* Hover */
 .burger:hover:before {
