--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -113,9 +113,10 @@
 
 
 
-.boldLikeComment{
+.boldLikeComment {
+  font-weight: 225px;
   /* font-weight: bold; */
-
+  /* font-we */
   /* background-color: blue; */
   color:black;
 
